# social-credit

./: .gitignore  Cargo.toml  README.md  index.html  sensitivedata.md  vercel.json
.github/workflows/: main.yml
api/: get_scores.rs  init.rs  report.rs
frontend/social-credit-ui/: package-lock.json  package.json
frontend/social-credit-ui/src/: App.css  App.jsx
src/: lib.rs  main.rs
