[package]
name = "social-credit"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2.0"
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.28"
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.1.0" }

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]

# You can specify a library for shared logic here (optional)
# [lib]
name = "social_credit"
# path = "src/lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "init"
path = "api/init.rs"

[[bin]]
name = "get_scores"
path = "api/get_scores.rs"

[[bin]]
name = "report"
path = "api/report.rs"

[[bin]]
name = "main"
path = "src/main.rs"